# td-deckbuilder

./: .gitignore  Cargo.toml  README.md  clippy.toml
assets/concept/: buildings.aseprite  concept.aseprite  unit.aseprite
game_design/: card_abilities.txt
src/: main.rs
src/card_gen/: main.rs
src/client/: button.rs  card_textures.rs  client_game_state.rs  config.rs  deck_builder.rs  draw.rs  hand.rs  hit_numbers.rs  input.rs  main.rs  network.rs  physical_card.rs  physical_hand.rs  player.rs  text_box.rs
src/common/: attack.rs  buff.rs  camera.rs  card.rs  component_attack.rs  component_attack_melee.rs  component_attack_ranged.rs  component_buff_aura.rs  component_buff_source.rs  component_health.rs  component_movement.rs  component_movement_behavior.rs  component_self_buff.rs  component_spy.rs  config.rs  debug_draw_config.rs  draw.rs  draw_server_controlled_game_state.rs  entities.rs  entity.rs  entity_blueprint.rs  entity_filter.rs  enum_flags.rs  find_target.rs  game_loop.rs  game_state.rs  gameplay_config.rs  get_unit_spawnpoints.rs  hand.rs  hit_numbers.rs  ids.rs  level_config.rs  lib.rs  melee_attack.rs  message_acknowledgement.rs  movement_behavior.rs  network.rs  outgoing_buff.rs  play_target.rs  ranged_attack.rs  (+11 more)
src/server/: game_loop.rs  level_config.rs  main.rs
src/tests/: _test_monitor.rs  condition.rs  main.rs  test_basic_movement_and_attack.rs  test_black_death.rs  test_continuous_buff_application.rs  test_dead_detection.rs  test_dynamite_man.rs  test_environment.rs  test_governor.rs  test_higher_motivation.rs  test_iron_mine.rs  test_lightning_strike.rs  test_meteor.rs  test_protector_can_attack_ranger.rs  test_ranger_stops_to_attack.rs  test_reinforced_doors.rs  test_small_tower.rs  test_spy.rs  test_steady_aim.rs  test_watchtower.rs
td-mapbuilder/: .clang-tidy  CMakeLists.txt
td-mapbuilder/.cache/clangd/index/: file_sys.cpp.03509134489F0702.idx  git.cpp.3864283EF029AEBE.idx  main.cpp.9336B057DC7B3577.idx
td-mapbuilder/projects/test/: entities.json  oid.txt
td-mapbuilder/src/: action.hpp  cursor_and_keys.hpp  file_sys.cpp  file_sys.hpp  game_entity.cpp  game_entity.hpp  git.cpp  git.hpp  globals.hpp  main.cpp  vector.cpp  vector.hpp
td-mapbuilder/tests/: CMakeLists.txt  action_tests.cpp
