[package]
name = "td-deckbuilder"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[env]
CLIPPY_CONF_DIR = "./"

[dependencies]
image = "0.24.7"
itertools = "0.12.0"
local-ip-address = "0.5.6"
macroquad = "0.4"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25.3"
